# camera_remote_shutter_v2

./: .gitignore  ERRATA.md  README.md
CAD/: .gitignore  Assembly.20241117-215320.FCBak  Assembly.FCStd  Enclosure.FCStd  MainBody.20241117-215316.FCBak  MainBody.FCStd  PCB.20241117-215601.FCBak  PCB.FCStd  PCB_Rev2.FCStd  TopCover.FCStd
Firmware/: StateDiagram.drawio
Firmware/F1012_Main/: .clangd  CMakeLists.txt  config.h  main.c
Firmware/F1012_Main/gc9a01/: gc9a01.c  gc9a01.h
Firmware/test1/: CMakeLists.txt  main.c
Firmware/test2/: CMakeLists.txt  config.h  main.c
Firmware/test2/gc9a01/: font.h  gc9a01.c  gc9a01.h
Firmware/test_lcd/: CMakeLists.txt  config.h  lv_conf.h  main.c
Firmware/test_lcd/gc9a01/: gc9a01.c  gc9a01.h
Firmware/tools/: gen_font.py
PCB/: .gitignore  BOM.csv  PCB.kicad_dru  PCB.kicad_pcb  PCB.kicad_prl  PCB.kicad_pro  PCB.kicad_sch  ProjectSymbols.kicad_sym  sym-lib-table
PCB/ProjectLibrary.pretty/: 1.28IN LCD.kicad_mod  12CE3KxxxxxTx.kicad_mod  MJ1-2503A.kicad_mod
PCB/bom/: ibom.html
SimTest/: .gitignore  SimTest.kicad_prl  SimTest.kicad_pro  SimTest.kicad_sch  SimTest.wbk
